# SQL_Alchemy_news

./: README.md  db.db  main.py  pyproject.toml
models/: Base.py  Person.py  Post.py
services/: Service.py
