[tool.poetry]
name = "SQLAlchemy"
version = "0.1.0"
description = ""
authors = ["Lucas Porto <lucasportolima@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"